fix: revice on see more, process illustration in index page | collapse in review and detail page | contact in about page

--- a/static/staging/assets/css/style.css
+++ b/static/staging/assets/css/style.css
@@ -1884,7 +1884,7 @@ body[page=preview] section.hero {
     animation: rotateLeft2 15s ease 2s infinite; }
   body[page=preview] section.hero .descriptive[layer=background] .box:nth-child(3), body[page=preview] section.hero .descriptive[layer=background] .box:nth-child(4) {
     left: -14%;
-    top: 10%;
+    top: 13%;
     border: 0.565em solid #70a1ff;
     border-radius: .350em;
     width: 22.000em;
@@ -1893,13 +1893,17 @@ body[page=preview] section.hero {
     @media (max-width: 93.999em) and (orientation: landscape) {
       body[page=preview] section.hero .descriptive[layer=background] .box:nth-child(3), body[page=preview] section.hero .descriptive[layer=background] .box:nth-child(4) {
         left: -18%; } }
-    @media (max-width: 93.999em) and (orientation: landscape) {
+    @media (max-width: 91em) and (orientation: landscape) {
       body[page=preview] section.hero .descriptive[layer=background] .box:nth-child(3), body[page=preview] section.hero .descriptive[layer=background] .box:nth-child(4) {
         left: -20%; } }
+    @media (max-width: 90.999em) and (orientation: landscape) {
+      body[page=preview] section.hero .descriptive[layer=background] .box:nth-child(3), body[page=preview] section.hero .descriptive[layer=background] .box:nth-child(4) {
+        top: 25%; } }
     @media (max-width: 74.999em) and (orientation: portrait) {
       body[page=preview] section.hero .descriptive[layer=background] .box:nth-child(3), body[page=preview] section.hero .descriptive[layer=background] .box:nth-child(4) {
         right: -20%;
-        left: unset; } }
+        left: unset;
+        top: 20%; } }
   body[page=preview] section.hero .descriptive[layer=background] .box:nth-child(3) {
     animation: rotateLeft3 15s ease infinite; }
   body[page=preview] section.hero .descriptive[layer=background] .box:nth-child(4) {
@@ -1946,7 +1950,22 @@ body[page=preview] section.hero {
         color: #FFFFFF;
         text-transform: uppercase;
         font-weight: 600;
-        padding: .800em 1.700em; }
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        width: 2.600em;
+        height: 2.600em;
+        padding: 0;
+        transition: all .5s ease; }
+        body[page=preview] section.hero .descriptive[layer=table] .form h4 button:hover {
+          cursor: pointer; }
+        body[page=preview] section.hero .descriptive[layer=table] .form h4 button.show {
+          transform: rotate(180deg); }
+        body[page=preview] section.hero .descriptive[layer=table] .form h4 button i {
+          font-size: 1.300em;
+          animation: arrowDown 2s ease infinite; }
     body[page=preview] section.hero .descriptive[layer=table] .form .collapse {
       position: relative;
       max-height: 0;
@@ -2024,7 +2043,8 @@ body[page=preview] section.hero {
     box-shadow: 0px 0px 20px -10px rgba(147, 194, 245, 0.49);
     border-radius: .350em;
     margin-top: 1.500em;
-    padding: 1.300em; }
+    padding: 1.300em;
+    z-index: 2; }
     @media (max-width: 35.499em) and (orientation: portrait) {
       body[page=preview] section.hero .descriptive[layer=table] .action {
         flex-wrap: wrap; } }
@@ -2064,6 +2084,18 @@ body[page=preview] section.hero {
       color: #FFFFFF;
       font-weight: 600;
       white-space: nowrap; }
+
+@keyframes arrowDown {
+  0% {
+    transform: translateY(0); }
+  25% {
+    transform: translateY(0.2em); }
+  50% {
+    transform: translateY(-0.1em); }
+  75% {
+    transform: translateY(0.15em); }
+  100% {
+    transform: translateY(0); } }
 
 @keyframes rotateLeft {
   0% {
@@ -2131,17 +2163,6 @@ body[page=detail] section.hero {
     body[page=detail] section.hero {
       padding: 7.000em 5%;
       min-height: 230vh; } }
-  body[page=detail] section.hero .descriptive .collapse {
-    position: relative;
-    max-height: 0;
-    opacity: 0;
-    z-index: -1;
-    transition: all .8s ease; }
-    body[page=detail] section.hero .descriptive .collapse.show {
-      max-height: 100em;
-      opacity: 1;
-      z-index: 1;
-      margin-bottom: 1.500em; }
   body[page=detail] section.hero .descriptive[layer=detail] h2, body[page=detail] section.hero .descriptive[layer=mapping] h2, body[page=detail] section.hero .descriptive[layer=raw] h2 {
     color: #2f3542; }
   body[page=detail] section.hero .descriptive[layer=detail] .table, body[page=detail] section.hero .descriptive[layer=mapping] .table, body[page=detail] section.hero .descriptive[layer=raw] .table {
@@ -2195,6 +2216,7 @@ body[page=detail] section.hero {
           background: linear-gradient(to right top, #70a1ff, #18C8FF);
           color: #FFFFFF;
           font-weight: 600;
+          font-size: .780em;
           display: flex;
           align-items: center;
           margin: 0 auto;
@@ -2438,21 +2460,23 @@ body[page=detail] section.hero {
             body[page=detail] section.hero .descriptive[layer=detail] .table .process ul li p {
               font-size: .800em;
               margin: 0 1.500em; }
-  body[page=detail] section.hero .descriptive[layer=mapping] h2 {
-    margin-bottom: .600em; }
-  body[page=detail] section.hero .descriptive[layer=mapping] .table {
-    margin-bottom: 1.500em; }
-    body[page=detail] section.hero .descriptive[layer=mapping] .table table {
-      table-layout: auto; }
-      body[page=detail] section.hero .descriptive[layer=mapping] .table table tbody tr:last-child td {
-        padding: 0 1.000em; }
-      body[page=detail] section.hero .descriptive[layer=mapping] .table table tbody tr td {
-        text-align: left !important;
-        min-width: 12.000em;
-        white-space: pre-line; }
-        body[page=detail] section.hero .descriptive[layer=mapping] .table table tbody tr td:first-child {
-          font-weight: 600;
-          white-space: nowrap; }
+  body[page=detail] section.hero .descriptive[layer=mapping] {
+    margin-bottom: 1.800em; }
+    body[page=detail] section.hero .descriptive[layer=mapping] h2 {
+      margin-bottom: .600em; }
+    body[page=detail] section.hero .descriptive[layer=mapping] .table {
+      margin-bottom: 1.500em; }
+      body[page=detail] section.hero .descriptive[layer=mapping] .table table {
+        table-layout: auto; }
+        body[page=detail] section.hero .descriptive[layer=mapping] .table table tbody tr:last-child td {
+          padding: 0 1.000em; }
+        body[page=detail] section.hero .descriptive[layer=mapping] .table table tbody tr td {
+          text-align: left !important;
+          min-width: 12.000em;
+          white-space: pre-line; }
+          body[page=detail] section.hero .descriptive[layer=mapping] .table table tbody tr td:first-child {
+            font-weight: 600;
+            white-space: nowrap; }
   body[page=detail] section.hero .descriptive[layer=raw] {
     position: fixed;
     top: 0;
